# API-Chaos-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.BSL  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TEST_REPORT.md  VERIFICATION_REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt  stress_test.py  verify_plan.py
backend/config/: default.toml
backend/scripts/: build_offline.sh  run_server.py
backend/scripts/tools/: _fix_tests.py  _fix_tests2.py  generate_perf_report.py
backend/src/api_chaos_agent/: __init__.py  main.py
backend/src/api_chaos_agent/core/: __init__.py  api_versioning.py  audit.py  config.py  config_reloader.py  deps.py  error_handlers.py  exceptions.py  feature_gates.py  key_store.py  license.py  logging.py  rate_limit.py  sanitizer.py  security.py  store_protocol.py
backend/src/api_chaos_agent/models/: __init__.py  analytics.py  cicd.py  distributed.py  plugin.py  report.py  scenario.py  schema.py  tenant.py
backend/src/api_chaos_agent/routers/: __init__.py  analytics.py  cicd.py  distributed.py  execution.py  license.py  plans.py  plugins.py  reports.py  scenarios.py  schema.py  schemas_v2.py  tenants.py
backend/src/api_chaos_agent/services/: __init__.py  analytics_service.py  cicd_service.py  distributed_engine.py  execution_engine.py  execution_service.py  grpc_graphql_parser.py  llm_router.py  plugin_framework.py  plugin_registry.py  postman_adapter.py  report_exporter.py  report_generator.py  scenario_generator.py  schema_parser.py  sqlite_store.py  store.py  tenant_service.py
backend/tests/: conftest.py  test_block_integration.py  test_comprehensive.py  test_execution_engine.py  test_integration.py  test_llm_router.py  test_models.py  test_phase1_node.py  test_phase2_block.py  test_phase3_comprehensive.py  test_report_generator.py  test_routers.py  test_scenario_generator.py  test_schema_parser.py
backend/tests/boundary/: test_boundary.py
backend/tests/e2e/: test_full_system.py
backend/tests/fixtures/: petstore_openapi.json  petstore_openapi.yaml
backend/tests/integration/: test_api_flow.py  test_phase2_blocks_1_3.py  test_phase2_blocks_4_6.py  test_phase2_blocks_7_9.py
backend/tests/perf/: test_performance.py
backend/tests/security/: test_security.py
backend/tests/stability/: test_stability.py
backend/tests/unit/: test_analytics_service.py  test_cicd_service.py  test_config_reloader.py  test_distributed_engine.py  test_execution_engine.py  test_execution_service.py  test_feature_gates.py  test_grpc_graphql_parser.py  test_key_store.py  test_license.py  test_llm_router.py  test_llm_router_cloud.py  test_llm_router_extended.py  test_main_extended.py  test_phase2_routes.py  test_plugin_framework.py  test_plugin_registry.py  test_postman_adapter.py  test_postman_adapter_extended.py  test_quality_improvements.py  test_rate_limit.py  test_report_exporter.py  test_routers_extended.py  test_sanitizer.py  test_security_modules.py  test_sqlite_store.py  test_store.py  test_store_protocol.py  test_tenant_service.py
docs/: api.md  architecture.md  configuration.md  getting-started.md  security.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: EndpointTable.tsx  ExecutionProgress.tsx  FileUpload.tsx  Layout.tsx  ReportView.tsx  ScenarioCard.tsx  SeverityBadge.tsx
frontend/src/lib/: degradation.ts  typeGuards.ts
frontend/src/pages/: AnalyticsPage.tsx  CiCdPage.tsx  DashboardPage.tsx  DistributedPage.tsx  ExecutionPage.tsx  PluginsPage.tsx  PricingPage.tsx  ReportsPage.tsx  ScenariosPage.tsx  SchemaPage.tsx  TeamPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
shared/types/: index.ts  scenario.ts  schema.ts
