[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-chaos-agent"
version = "1.0.0"
description = "Chaos testing platform for REST APIs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "API Chaos Agent Team"}]
keywords = ["chaos", "testing", "api", "rest", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "prance>=23.6.21.0",
    "pyyaml>=6.0",
    "diskcache>=5.6.0",
    "openai>=1.0",
    "anthropic>=0.30.0",
    "structlog>=24.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx",
    "ruff>=0.5.0",
    "mypy>=1.10",
]
redis = [
    "redis>=5.0",
]
keyring = [
    "keyring>=25.0",
]

[project.scripts]
api-chaos-agent = "api_chaos_agent.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/api_chaos_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
src = ["src"]
